# btt-ai-studio-2025-ppfa-1c

./: Data_dictionary.md  README.md  SETUP.md  ai_studio.ipynb  docker-compose.yml  gitignore.txt
config/: Dockerfile  pyproject.toml
