[project]
name = "ai-studio"
version = "0.1.0"
description = "AI Studio 2025 Project for PPFA"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gensim>=4.3.3",
    "google-cloud-bigquery>=3.35.1",
    "jupyter>=1.1.1",
    "nltk>=3.9.2",
    "pandas>=2.3.1",
    "pandas-gbq>=0.29.2",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "spacy>=3.8.7",
    "textblob>=0.19.0",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "wordcloud>=1.9.4",
    "xgboost>=3.1.2",
]
